# nexops-mcp

./: .gitignore  Dockerfile  FIXES_APPLIED.md  README.md  WHITE_PAPER.md  coverage_stability_results.json  debug_models.py  debug_multisig.py  nixpacks.toml  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  railway.toml  regression_results.json  regression_results_run2.json  render.yaml  reproduce_syntax_error.py  requirements.txt  run_single.py  statusjune.md  test_audit_repair.py  test_batch_1.py  test_batch_3.py  test_coverage_stability.py  test_distribution.py  test_endpoints.py  test_golden_escrow.py  test_lnc008_modes.py  test_sc02_sc04.py  test_sc04_show_code.py  test_structural_core.py
BCH_Knowledge_Base-main/: README.md
audit_benchmark_realworld/: README.md  index.json
audit_replay_corpus/: README.md  index.json
benchmark/: api.py  compare.py  evaluator.py  feature_extractor.py  reporter.py  run_11_pattern_diagnosis.py  runner.py  schemas.py  semantic_requirements.py
configs/: models.json  models_concert_run.json  models_smoke.json  prompts.json  prompts_concert_run.json  prompts_smoke.json
docs/: 3_PHASE_GENERATION_ARCHITECTURE.md  ANTI_PATTERN_SYSTEM.md  FRONTEND_INTEGRATION.md  README_ORGANIZATION.md  adversarial_registry.json  adversarial_registry_audit.md  adversarial_strategy.md  architecture_debt_review.md  audit_classification_validation_report.md  audit_enhancement_implementation_report.md  audit_pipeline_architecture.md  audit_replay_strategy.md  bch_contract_ecosystem.md  bch_threat_model.md  benchmark_registry.json  (+79 more)
(+459 files in other folders)
